[tool.poetry]
name = "aiogram-mongo-template"
version = "0.1.0"
description = ""
authors = ["mainoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
babel = "^2.16.0"
environs = "^11.0.0"
loguru = "^0.7.2"
motor = "^3.5.1"
tornado = "^6.4.1"
pydantic = "^2.8.2"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
